[project]
name = "rvc-onnx"
version = "0.1.0"
description = "RVC CLI using ONNX"
readme = "README.md"
authors = [
    { name = "dev6699", email = "kweijack.dev@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1",
    "onnxruntime-gpu>=1.22.0",
    "pyinstaller>=6.16.0",
    "soundfile>=0.13.1",
]

[project.scripts]
rvc-onnx = "rvc_onnx.cli:run"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
